[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["gn5 <gn5@sanger.ac.uk>"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.0"
logdecorator = "^2.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "src.console:main"